# nebari

./: .cirun.yml  .flake8  .gitignore  .gitmodules  .hadolint.yaml  .mdformat.toml  .pre-commit-config.yaml  .readthedocs.yml  .vale.ini  .yamllint  .yamllint.yml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  RELEASE.md  ROADMAP.md  SECURITY.md  UPGRADE_STEPS.md  build.nix  conda_build.py  conf.py  environment-dev.yaml  flake.nix  index.md  index.rst  noxfile.py  nuxt.config.js  output.yaml  package.json  pyproject.toml  pytest.ini  setup.cfg  setup.py  shell.nix  test_plugin_hooks.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  README.md  claude-issue-actions.yml  config.yaml  config.yml  release-notes-sync-config.yaml  renovate.json5  sync.yml
app/: environment.yml  main.py
architecture/: README.md  aws.py  common.py  do.py  gcp.py  high_level.py
backup_files/: Dockerfile  backup_script.py  backup_spec.yaml
docker/: Dockerfile  Dockerfile.dask-worker  Dockerfile.jupyterhub  Dockerfile.jupyterlab  Dockerfile.workflow-controller  README.md  makefile
docs/: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  conf.py  docusaurus.config.js  faqs.ipynb  hello.md  index.md  manual_backups.md  package.json  pyproject.toml  qhub-aws-deployment.md  qhub-do-deployment.md  qhub-gcp-deployment.md  readme.md  readme.md.ipynb  requirements.txt  setup.py  sidebars.js
docs-sphinx/: README.md  cli.html  cli.rst  conf.py  index.rst
docs/_templates/: announcement.html  layout.html
docs/api_docs/: README.md  api_doc.md  api_doc_mods.py  build.novella
docs/aws/: index.md  installation.md  maintenance.md
docs/do/: configuration.md  maintenance.md
docs/docs/: development.md  faqs.md  getting-started.md  index.md  qhub-do-deployment.md  qhub-gcp-deployment.md  step-by-step-walkthrough.md  troubleshooting.md  users.md
docs/docs/aws/: configuration.md
docs/docs/community/: index.mdx  issues.md
docs/docs/do/: configuration.md  infrastructure.md  installation.md  maintenance.md  theming.md
docs/docs/explanations/: architecture.md  index.mdx
docs/docs/gcp/: configuration.md  maintenance.md  qhub-gcp-deployment.md
docs/docs/governance/: index.mdx
docs/docs/how-tos/: How to authenticate using Keycloak.md  How to install and configure Keycloak.md  dask-nebari-config.md  index.mdx
docs/docs/references/: architecture.md  index.mdx
docs/docs/tutorials/: index.mdx  using_dask.md  using_vscode.md
docs/ext/: substitute.py
docs/prototype/: 2020-05-18-cookiecutter-yaml-functions.ipynb  2020-05-18-recent-schema.ipynb
docs/qhapi/: api.py  schema.py
docs/source/: introduction.md
docs/source/01_intro/: 01_intro.md  1_intro.md
docs/source/02_get_started/: 01_installation.md  02_setup.md  03_usage.md  04_configuration.md  05_management.md  06_troubleshooting.md  07_support.md  08_upgrade.md  09_end_user_faq.md  2_setup.md
docs/source/03_tutorials_and_samples/: 01_cloud_setup.md  03_dask_gateway_usage.md  1_project_setup_tutorial.md
docs/source/04_how_to_guides/: 1_qhub-aws-deploy_guide.md  2_qhub-gcp-deploy_guide.md  3_qhub-azure-deploy_guide.md  3_qhub-do-deploy_guide.md  4_qhub-do-deploy_guide.md  4_system_backup.md  5_conda_env_update.md  5_qhub_gpu.md  6_preemptible_instance_with_qhub.md  6_terraform_install.md  7_qhub_gpu.md  8_login_qhub_training.md
docs/source/05_reference/: 01_qhub_infrastructure.md  02_system_maintenance.md  03_base_cost.md
docs/source/06_developers_contrib_guide/: 01_architecture.md  02_adv_docs.md  03_contrib_guidelines.md  04_local_development.md  04_tests.md  05_changelog.md  06_release.md
docs/source/07_resources/: 1_logos.md  2_glossary.md
docs/source/08_integrations/: 1_prefect.md  2_clearml.md
docs/source/10_resources/: 1_logos.md  2_glossary.md
docs/source/1_intro/: 1_intro.md
docs/source/2_get_started/: 3_configuration.md  3_usage.md  4_configuration.md
docs/source/3_tutorials/: 1_project_setup_tutorial.md
docs/source/4_how_to_guides/: 1_qhub-aws-deploy_guide.md  5_conda_env_update.md
docs/source/5_theme/: 1_theme.md
docs/source/6_reference/: 1_qhub_infrastructure.md
docs/source/7_development/: 1_architecture.md  2_adv_env.md
docs/source/8_integrations/: 1_prefect.md
docs/source/9_faq/: 1_faqs.md
docs/source/admin_guide/: argo-workflows.md  awss3curl.md  backup.md  breaking-upgrade.md  clearml.md  cost.md  custom-helm-charts.md  faq.md  gpu.md  index.md  jupyterhub.md  keycloak.md  monitoring.md  preemptible-spot-instances.md  prefect.md  system_maintenance.md  traefik.md  troubleshooting.md  upgrade.md
docs/source/dev_guide/: architecture.md  changelog.md  contribution.md  index.md  keycloak.md  logo.md  minikube.md  release.md  testing.md
docs/source/development/: architecture.md  contribution.md
docs/source/installation/: configuration.md  existing.md  index.md  installation.md  login.md  management.md  setup.md  usage.md
docs/source/introduction/: index.md  introduction.md  qhub-101.md
docs/source/reference/: getting_in_touch.md  index.md
docs/source/user_guide/: argo_workflows.md  code_server.md  dashboard.md  dask_gateway.md  environments.md  experimental.md  faq.md  getting_started.md  idle_culler.md  index.md  ssh.md  training.md  troubleshooting.md
home/: .gitignore  Dockerfile  conf.py  nuxt.config.js  package.json
nebari/: __main__.py  constants.py  cost.py  deploy.py  destroy.py  initialize.py  keycloak.py  render.py  schema.py  upgrade.py  utils.py  version.py
pages/: blog.vue  faq.vue  navbar.vue
posts/: the-first-qhub-post.md
prototype/: 2020-05-13-qhub_schema.ipynb  2020-05-18-cookiecutter-yaml-functions.ipynb  2020-05-18-recent-schema.ipynb
qhapi/: __init__.py  __main__.py  environment.yml  schema.py
qhub/: VERSION  __main__.py  _version.py  console.py  constants.py  cost.py  deploy.py  deprecate.py  depricate.py  destroy.py  develop.py  forcedestroy.py  initialize.py  keycloak.py  render.py  schema.py  state.py  upgrade.py  utils.py  version.py
qhub_ops/: __main__.py  deploy.py  schema.py
(+1538 files in other folders)
