### Build ###
[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/_nebari"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/_nebari/_version.py"
local_scheme = "node-and-timestamp"


### Project ###
[project]
name = "nebari"
dynamic = ["version"]
description = "A Jupyter and Dask-powered open source data science platform."
readme = "README.md"
requires-python = ">=3.8"
license = "BSD-3-Clause"
authors = [
    { name = "Nebari development team", email = "internal-it@quansight.com" },
]
keywords = [
    "aws",
    "gcp",
    "do",
    "azure",
    "nebari",
    "dask",
    "jupyter",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "Framework :: Jupyter :: JupyterLab",
]

dependencies = [
    "auth0-python==4.0.0",
    "azure-identity==1.12.0",
    "azure-mgmt-containerservice==19.1.0",
    "bcrypt==3.2.2",
    "boto3==1.26.78",
    "cloudflare==2.11.1",
    "kubernetes==26.1.0",
    "pydantic==1.10.5",
    "pynacl==1.5.0",
    "python-keycloak==2.12.0",
    "questionary==1.10.0",
    "rich==12.6.0",
    "ruamel.yaml==0.17.21",
    "typer==0.7.0",
    "requests-toolbelt==0.9.1",
]

[project.optional-dependencies]
dev = [
    "black==22.3.0",
    "dask-gateway",
    "diagrams",
    "escapism",
    "flake8==3.8.4",
    "importlib-metadata<5.0",
    "jhub-client",
    "paramiko",
    "pre-commit",
    "pytest",
    "pytest-timeout",
    "grayskull",
    "build",
]

[project.urls]
Documentation = "https://www.nebari.dev/docs"
Source = "https://github.com/nebari-dev/nebari"

[project.scripts]
nebari = "_nebari.cli.main:app"

[tool.ruff]
ignore = [
    "E501", # Line too long
    "F821", # Undefined name
]
extend-exclude = [
    "src/_nebari/template",
    "docs/source/conf.py",
    "docs",
    "home",
    "__pycache__"
]
