[metadata]
name = qhub
author = Quansight
url = https://github.com/quansight/qhub
description = Management of QHub on Cloud Infrastructure
long_description = file: README.md
long_description_type = text/markdown
keywords = aws, gcp, do, azure, qhub
license = BSD 3-Clause License
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls =
    Bug Reports = https://github.com/quansight/qhub/issues
    Source = https://github.com/quansight/qhub

[options]
zip_safe = False
include_package_data = True
install_requires =
    cookiecutter==1.7.2
    ruamel.yaml
    cloudflare
    auth0-python
    pydantic
    pynacl
    bcrypt
    kubernetes
    azure-identity==1.6.1
    azure-mgmt-containerservice==16.2.0
    boto3
    packaging
    python-keycloak
    importlib_metadata;python_version<"3.8"

# we probably have to ignore some folders
packages=find:

[options.extras_require]
dev =
    flake8==3.8.4
    black==20.8b1
    twine
    pytest
    diagrams
    jhub-client
    pre-commit
    kubernetes
    dask-gateway

[options.entry_points]
console_scripts =
    qhub = qhub.__main__:main

[tool:pytest]
norecursedirs = _build .nox .ipynb_checkpoints

[flake8]
ignore = E203, E266, E501, W503
max-line-length = 89
exclude =
  .git,
  __pycache__
  docs/source/conf.py
  qhub/template
  build
  dist
  docs
  home

[options.packages.find]
exclude = 
    tests
    tests_deployment