[metadata]
name = qhub
author = Quansight
url = https://github.com/quansight/qhub
description = Management of QHub on Cloud Infrastructure
long_description = file: README.md
long_description_content_type = text/markdown
keywords = aws, gcp, do, azure, qhub
license = BSD 3-Clause License
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls =
    Bug Reports = https://github.com/quansight/qhub/issues
    Source = https://github.com/quansight/qhub

[options]
zip_safe = False
include_package_data = True
packages = qhub
install_requires =
    ruamel.yaml
    cloudflare
    auth0-python
    pydantic
    pynacl
    bcrypt
    kubernetes
    azure-identity==1.6.1
    azure-mgmt-containerservice==16.2.0
    boto3
    python-keycloak
    importlib_metadata;python_version<"3.8"
    rich

[options.extras_require]
dev =
    flake8==3.8.4
    black==22.3.0
    twine
    pytest
    pytest-timeout
    diagrams
    jhub-client
    pre-commit
    kubernetes
    dask-gateway
    paramiko
    escapism

[options.entry_points]
console_scripts =
    qhub = qhub.__main__:main

[tool:pytest]
norecursedirs = _build .nox .ipynb_checkpoints

[flake8]
ignore = E203, E266, E501, W503
max-line-length = 89
builtins = c
exclude =
  .git,
  __pycache__
  docs/source/conf.py
  qhub/template
  build
  dist
  docs
  home

[options.packages.find]
exclude =
    tests
    tests_deployment

[codespell]
builtin = rare,clear,informal,names
skip = _build,*/build/*,*/node_modules/*,qhub.egg-info,.nox,*.git,*.js,*.json,*.yaml,*.yml
ignore-words-list = AKS,aks
