[metadata]
# name = nebari
# author = Nebari development team
# url = https://github.com/nebari-dev/nebari
# description = A Jupyter and Dask-powered open source data science platform.
# long_description = file: README.md
# long_description_content_type = text/markdown
# keywords = aws, gcp, do, azure, nebari
# license = BSD 3-Clause License
# classifiers =
#     Development Status :: 5 - Production/Stable
#     Intended Audience :: Developers
#     Topic :: Software Development :: Build Tools
#     Programming Language :: Python :: 3
#     Programming Language :: Python :: 3.7
#     Programming Language :: Python :: 3.8
#     Programming Language :: Python :: 3.9
#     Programming Language :: Python :: 3.10
#     Intended Audience :: Developers
# 	Intended Audience :: Education
# 	Intended Audience :: Information Technology
# 	Intended Audience :: Science/Research
# 	Intended Audience :: System Administrators
# 	Framework :: Jupyter :: JupyterLab
# project_urls =
#     Bug Reports = https://github.com/quansight/nebari-dev/issues
#     Source = https://github.com/nebari-dev/nebari

[options]
zip_safe = False
include_package_data = True
packages = nebari
# install_requires =
    # ruamel.yaml
    # cloudflare
    # auth0-python
    # pydantic
    # pynacl
    # bcrypt
    # kubernetes
    # azure-identity==1.6.1
    # azure-mgmt-containerservice==16.2.0
    # boto3
    # python-keycloak
    # importlib_metadata;python_version<"3.8"
    # rich
    # typer
    # questionary

# [options.extras_require]
# dev =
#     flake8==3.8.4
#     black==22.3.0
#     importlib-metadata<5.0
#     twine
#     pytest
#     pytest-timeout
#     diagrams
#     jhub-client
#     pre-commit
#     kubernetes
#     dask-gateway
#     paramiko
#     escapism

# [options.entry_points]
# console_scripts =
#     nebari = nebari.cli.main:app

[tool:pytest]
norecursedirs = _build .nox .ipynb_checkpoints

[flake8]
ignore = E203, E266, E501, W503
max-line-length = 89
builtins = c
exclude =
  .git,
  __pycache__
  docs/source/conf.py
  nebari/template
  build
  dist
  docs
  home

[options.packages.find]
exclude =
    tests
    tests_deployment

# Needs
# [codespell]
# builtin = rare,clear,informal,names
# skip = _build,*/build/*,*/node_modules/*,nebari.egg-info,.nox,*.git,*.js,*.json,*.yaml,*.yml
# ignore-words-list = AKS,aks
