[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "qhapi"
author = "Quansight"
author-email = "qhub@quansight.com"
requires = ["fastapi", "cookiecutter"]
keywords = ""
home-page = "https://github.com/Quansight/qub-home"
license = "BSD-3-Clause"
description-file = 'readme.md'


[tool.flit.metadata.requires-extra]
[tool.flit.metadata.urls]    
[tool.flit.scripts]
[tool.flit.sdist]

[tool.coverage.run]
branch = true
include = []

[tool.coverage.report]
exclude_lines =[
    "pragma: no cover",
    "if __name__ == .__main__.:"
]

[tool.coverage.html]
directory = "docs/htmlcov"
